Code running on mxr-test.landfill.bugzilla.org as of 21-Mar-2008

--- a/style/pl.css
+++ b/style/pl.css
@@ -1,7 +1,7 @@
 @import url(style.css);
-.comment {
+.c { /* comment */
  font-weight: bold;
 }
-.string {
+.s { /* string */
  font-weight: bold;
 }
