--- a/style/alt1-cpp.css
+++ b/style/alt1-cpp.css
@@ -1,21 +1,33 @@
 @import url(style.css);
 
-.function {
+.f {
 border: 1px dotted green;
 }
 
-.class {
+.c {
 border: 1px dotted yellow;
 }
 
-.union {
+.u {
 border: 1px dotted purple;
 }
 
-.proto {
+.p {
 border: 1px dotted black;
 }
 
-.reference {
+.d {
+border: 1px dotted pink;
+}
+
+.v {
+border: 1px dotted teal;
+}
+
+.i {
+border: 1px dotted magenta;
+}
+
+.r {
 border: 1px dotted red;
 }
