adding mark support for urls similar to bonsai's
note: mxr links are generally unstable, if you can use bonsai, you should.

--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,12 @@
 .i { /* include */
  color: blue;
 }
+.m {
+ background-color: lightgreen;
+}
+a.m {
+ background-color: lightblue;
+}
 ul {
  margin: 0px 0px 0px 1em;
 }
