adding desc class to descriptive top blob enables sites to choose whether to align things to the left or center the default is now left aligned

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+/* if you want to center the headings, uncomment this block.
+.desc {
+ text-align: center;
+ margin-left: auto;
+ margin-right: auto;
+}
+*/
 .c { /* comment */
  font-style: italic;
  font-weight: bold;
